@@ -45,14 +45,14 @@ $slice_ams = array();
 $all_rspecs = fetchRSpecMetaData($user);
 include("tool-lookupids.php");
 
-echo '<html lang="en">';
+echo '<!DOCTYPE HTML><html lang="en">';
 echo '<head>';
 echo '<meta charset="utf-8">';
 echo '<title>GENI Portal: Add Resources to Slice</title>';
 
 echo '<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>';
 echo '<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>';
-echo '<script src="slice-add-resources-jacks.js"></script>';
+echo '<script src="/secure/slice-add-resources-jacks.js"></script>';
 
 
 echo '<link type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/humanity/jquery-ui.css" rel="Stylesheet" />';
@@ -68,31 +68,24 @@ setup_jacks_editor_slice_context();
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-42566976-1', 'bbn.com');ga('send', 'pageview');</script>
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.0/js/jquery.dataTables.js"></script>
-
+</head>
+<body>
+<div id="content">
 <link rel="stylesheet" type="text/css" href="jacks-editor-app.css" />
 <link rel="stylesheet" type="text/css" href="slice-add-resources-jacks.css" />
-
 <script src="<?php echo $jacks_stable_url;?>"></script>
-<script src="jacks-editor-app.js"></script>
-<script src="portal-jacks-editor-app.js"></script>
-
 
 <?php
-echo '</head>';
-echo '<body>';
-echo '<div id="content" >';
 
 echo "<table style=\"margin-left: 0px;width:90%;height:20px\"><tr><th>Add Resources to GENI Slice $slice_name</th></tr></table>";
 
-print "<table style=\"margin-left: 0px; width:90%; height:70%\" id='jacks-editor-app'><tbody>";
+print "<table style=\"margin-left: 0px; width:90%; height:70%\" id='jacks-editor-app'>";
 print "<tr><td><div id='jacks-editor-app-container' style='width:100%; height:100%'>";
 print build_jacks_editor();
 print "</div></td></tr></table>";
+print "<script src='portal-jacks-editor-app.js'></script>";
 
 ?>
-
-<link rel="stylesheet" type="text/css" href="slice-add-resources-jacks.css" />
-<link rel="stylesheet" type="text/css" href="jacks-editor-app.css" />
 
 <script>
   var slice_id = <?php echo json_encode($slice_id); ?>;
@@ -179,7 +172,9 @@ print "<button onClick=\"history.back(-1)\">Cancel</button>\n";
 print '</p>';
 
 ?>
-
+<!--
+The height setting below breaks things on Chrome for Aaron, but not Marshall. But it is what allows the pane to grow vertically.
+  -->
 <script>
 $(document).ready(function() {
     $('#jacks-editor-status').hide();
@@ -188,7 +183,6 @@ $(document).ready(function() {
     pane.style.width = "100%";
   });
 </script>
-
 <?php
 
 print "</div></td></tr></tbody></table>";
